Ingress setup/Oracle/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - secretName: tls-secret
  rules:
    - http:
        paths:
          - backend:
              service:
                name: docker-hello-world-svc
                port:
                  number: 8088
            path: /
            pathType: Prefix
